US15898 Refactor Jumbotron Inline Video Prevent inline video being too tall on large screens

--- a/assets/stylesheets/components/_jumbotrons.scss
+++ b/assets/stylesheets/components/_jumbotrons.scss
@@ -107,6 +107,7 @@
       }
 
       @media (min-width: $screen-lg) {
+        padding-bottom: 100vh;
         width: 94%;
       }
     }
